--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "build": "pnpm dlx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "pnpm dlx prisma generate && env $(cat .env.local | xargs) pnpm dlx prisma migrate dev"
+    "migrate": "dotenv -e .env.local -- pnpm dlx prisma migrate dev"
   },
   "prisma": {
     "schema": "src/db/schema.prisma"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@prisma/client": "^6.3.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -26,9 +27,12 @@
     "@supabase/supabase-js": "^2.48.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "fuse.js": "^7.0.0",
+    "jspdf": "^3.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.5.2",
     "next-themes": "^0.4.4",
     "openai": "^4.82.0",
     "react": "^19.0.0",
@@ -42,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
